--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gatsby-remark-prettier": "^1.0.0",
     "gatsby-transformer-remark": "^2.12.0",
     "graphql-yoga": "^1.18.3",
+    "node-fetch": "^2.6.1",
     "nodemon": "^2.0.6",
     "prettier": "^2.2.1"
   },
